<resources>
    <string name="app_name">ShareText</string>
    <string name="ip_address_and_port_number_label">IP Address &amp; Port Number</string>
    <string name="ip_address_label">IP Address</string>
    <string name="port_label">Port</string>
    <string name="connect_label">Connect</string>
    <string name="instructions_label">Instructions</string>
    <string name="share_text_instructions"><![CDATA[• Download the ShareText app from <br/>&#160;&#160;<a href="https://snapcraft.io/store">Ubuntu Store</a><br/>• Open the app<br/>• Both devices must be connected to the <br/>&#160;&#160;same network<br/>• Click on the \"Search for Android <br/>&#160;&#160;device\"<br/>• Enter credentials in this form<br/>• Click \"Connect\"<br/>• Start sharing text instantly]]></string>
    <string name="ok_label">OK</string>
    <string name="contact_developer_header_label">Contact ShareText Developer</string>
    <string name="send_email_label">Send an Email</string>
    <string name="internet_connection_not_available_label">Internet connection is not available</string>
    <string name="device_connected_message">%s is Connected</string>
    <string name="connection_failed_label"><![CDATA[&#160;&#160;Connection Failed!!! Make sure that you entered the correct IPAddress &amp; the PortNumber. Also make sure that you have clicked the \'Search for Android Device\' in the desktop app before clicking \'Connect\' here.<br /><br />&#160;&#160;* If you try to connect second time with the same port number, it will fail, so reopen the apps in order to get a new PortNumber from the desktop app. Hope it helps&#8230;]]></string>
    <string name="field_required_error">Field is required</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="share_text_label">Share Text</string>
    <string name="saved_label">Saved Text</string>
    <string name="title_notifications">Notifications</string>
    <string name="warning_label">Warning</string>
    <string name="dark_mode_label">Enable Dark Mode</string>
    <string name="remember_last_ip_address_label">Remember last IPAddress</string>
    <string name="settings_label">Settings</string>
    <string name="enter_message_here_label">Enter text here&#8230;</string>
    <string name="start_sharing_text">Start the sharing between Android &amp; Linux</string>
    <string name="link_value_text" translatable="false"><![CDATA[<u>%s</u>]]></string>
    <string name="exit_share_text_message"><![CDATA[Do you want to exit?<br />Notice that the connection will be lost&#8230;]]></string>
    <string name="save_label">Save</string>
    <string name="close_label">Close</string>
    <string name="selected_messages_value">%d Selected</string>
    <string name="disconnected_message">Ups, Server closed the Connection!!!</string>
    <string name="view_saved_text_label">View Saved Text</string>
    <string name="search_text_here">Search here&#8230;</string>
    <string name="empty_saved_texts">You haven\'t saved any text yet&#8230;</string>
    <string name="search_empty_result_text_with_value">No results found with \'%s\'</string>
    <string name="share_text_project_label">ShareText Project</string>
    <string name="project_label">Project</string>
    <string name="copy_label">Copy</string>
</resources>
