<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/basicDialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/basic_dialog_header_background"
        android:padding="@dimen/activity_horizontal_margin">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bottomSheetHeaderImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_settings"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bottomSheetHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/settings_label"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/darkModeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/nav_header_vertical_spacing"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_monospace"
            android:text="@string/dark_mode_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/darkModeSwitchButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.suke.widget.SwitchButton
            android:id="@+id/darkModeSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sb_show_indicator="false"
            app:sb_checked_color="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/grey"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rememberIPAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/nav_header_vertical_spacing"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_monospace"
            android:text="@string/remember_last_ip_address_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/rememberIPAddressSwitchButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.suke.widget.SwitchButton
            android:id="@+id/rememberIPAddressSwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sb_show_indicator="false"
            app:sb_checked_color="@color/colorAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>