<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whiteTwo"
    android:fitsSystemWindows="true"
    android:id="@+id/constraintLayout"
    tools:context=".connect.ConnectActivity">

    <FrameLayout
        android:id="@+id/mainFrameBar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/moreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/bottom_sheet_corner_radius"
        android:background="@drawable/ripple_circle_background"
        app:srcCompat="@drawable/ic_more_vert"
        android:padding="@dimen/bottom_sheet_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/shareTextHeaderIcon"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainFrameBar"
        app:srcCompat="@drawable/share_text_header_icon" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@+id/shareTextHeaderIcon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="@dimen/activity_horizontal_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/credentialsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_monospace"
                android:text="@string/enter_credentials_label"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/instructionsIconButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@null"
                android:tint="@color/yellowColor"
                app:layout_constraintBottom_toBottomOf="@+id/credentialsLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/credentialsLabel"
                app:layout_constraintTop_toTopOf="@+id/credentialsLabel"
                app:srcCompat="@drawable/ic_info" />

            <com.agelousis.sharetext.custom.views.BasicTextFieldLayout
                android:id="@+id/ipAddressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                app:hint="@string/ip_address_label"
                app:inputTextType="IP_ADDRESS"
                app:layout_constraintTop_toBottomOf="@+id/credentialsLabel" />

            <com.agelousis.sharetext.custom.views.BasicTextFieldLayout
                android:id="@+id/portLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                app:hint="@string/port_label"
                app:inputTextType="NUMBER"
                app:isLastField="true"
                app:layout_constraintTop_toBottomOf="@+id/ipAddressLayout" />

            <com.agelousis.sharetext.custom.views.BasicButton
                android:id="@+id/connectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:fontFamily="@font/ubuntu_monospace"
                android:text="@string/connect_label"
                android:textAllCaps="false"
                android:textColor="@color/whiteTwo"
                android:textSize="16sp"
                android:textStyle="bold"
                app:buttonBackgroundColor="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@+id/portLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>